compiler/tests/snapshots/ir_snapshot_tests__ir_snapshot_float_basic.snap
---
source: tests/ir_snapshot_tests.rs
expression: ir
---
; ModuleID = 'pyferro'
source_filename = "pyferro"

@float_fmt = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr noundef readonly captures(none), ...) local_unnamed_addr #0

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define double @average(double %a, double %b) local_unnamed_addr #1 {
entry:
  %faddtmp = fadd double %a, %b
  %fdivtmp = fmul double %faddtmp, 5.000000e-01
  ret double %fdivtmp
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %print_call = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_fmt, double 5.000000e+00)
  ret i32 0
}

attributes #0 = { nofree nounwind }
attributes #1 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }
