compiler/tests/snapshots/ir_snapshot_tests__ir_snapshot_for_range.snap
---
source: tests/ir_snapshot_tests.rs
expression: ir
---
; ModuleID = 'pyferro'
source_filename = "pyferro"

@print_fmt = private unnamed_addr constant [6 x i8] c"%lld\0A\00", align 1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr noundef readonly captures(none), ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
define noundef i64 @foo(i64 %n) local_unnamed_addr #0 {
entry:
  %for_cond6 = icmp sgt i64 %n, 0
  br i1 %for_cond6, label %for_body, label %for_exit

for_body:                                         ; preds = %entry, %for_body
  %i.07 = phi i64 [ %for_inc, %for_body ], [ 0, %entry ]
  %print_call = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 %i.07)
  %for_inc = add nuw nsw i64 %i.07, 1
  %for_cond = icmp slt i64 %for_inc, %n
  br i1 %for_cond, label %for_body, label %for_exit

for_exit:                                         ; preds = %for_body, %entry
  ret i64 0
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %print_call.i = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 0)
  %print_call.i.1 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 1)
  %print_call.i.2 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 2)
  %print_call.i.3 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 3)
  %print_call.i.4 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 4)
  ret i32 0
}

attributes #0 = { nofree nounwind }
