compiler/tests/snapshots/ir_snapshot_tests__ir_snapshot_sum_to_n.snap
---
source: tests/ir_snapshot_tests.rs
expression: ir
---
; ModuleID = 'pyferro'
source_filename = "pyferro"

@print_fmt = private unnamed_addr constant [6 x i8] c"%lld\0A\00", align 1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr noundef readonly captures(none), ...) local_unnamed_addr #0

; Function Attrs: nofree norecurse nosync nounwind memory(none)
define i64 @sum_to_n(i64 %n) local_unnamed_addr #1 {
entry:
  %cmptmp.not10 = icmp slt i64 %n, 1
  br i1 %cmptmp.not10, label %loop_exit, label %loop_body.preheader

loop_body.preheader:                              ; preds = %entry
  %min.iters.check = icmp ult i64 %n, 30
  br i1 %min.iters.check, label %loop_body.preheader18, label %vector.scevcheck

vector.scevcheck:                                 ; preds = %loop_body.preheader
  %0 = zext nneg i64 %n to i128
  %1 = add nsw i128 %0, -1
  %2 = trunc nsw i128 %1 to i64
  %3 = icmp ugt i64 %2, 9223372036854775805
  %4 = icmp ugt i128 %1, 18446744073709551615
  %5 = or i1 %3, %4
  br i1 %5, label %loop_body.preheader18, label %vector.ph

vector.ph:                                        ; preds = %vector.scevcheck
  %n.vec = and i64 %n, 9223372036854775800
  %6 = or disjoint i64 %n.vec, 1
  br label %vector.body

vector.body:                                      ; preds = %vector.body, %vector.ph
  %index = phi i64 [ 0, %vector.ph ], [ %index.next, %vector.body ]
  %vec.phi = phi <2 x i64> [ zeroinitializer, %vector.ph ], [ %7, %vector.body ]
  %vec.phi13 = phi <2 x i64> [ zeroinitializer, %vector.ph ], [ %8, %vector.body ]
  %vec.phi14 = phi <2 x i64> [ zeroinitializer, %vector.ph ], [ %9, %vector.body ]
  %vec.phi15 = phi <2 x i64> [ zeroinitializer, %vector.ph ], [ %10, %vector.body ]
  %vec.ind = phi <2 x i64> [ <i64 1, i64 2>, %vector.ph ], [ %vec.ind.next, %vector.body ]
  %step.add = add <2 x i64> %vec.ind, splat (i64 2)
  %step.add.2 = add <2 x i64> %vec.ind, splat (i64 4)
  %step.add.3 = add <2 x i64> %vec.ind, splat (i64 6)
  %7 = add <2 x i64> %vec.phi, %vec.ind
  %8 = add <2 x i64> %vec.phi13, %step.add
  %9 = add <2 x i64> %vec.phi14, %step.add.2
  %10 = add <2 x i64> %vec.phi15, %step.add.3
  %index.next = add nuw i64 %index, 8
  %vec.ind.next = add <2 x i64> %vec.ind, splat (i64 8)
  %11 = icmp eq i64 %index.next, %n.vec
  br i1 %11, label %middle.block, label %vector.body, !llvm.loop !0

middle.block:                                     ; preds = %vector.body
  %bin.rdx = add <2 x i64> %8, %7
  %bin.rdx16 = add <2 x i64> %9, %bin.rdx
  %bin.rdx17 = add <2 x i64> %10, %bin.rdx16
  %12 = tail call i64 @llvm.vector.reduce.add.v2i64(<2 x i64> %bin.rdx17)
  %cmp.n = icmp eq i64 %n, %n.vec
  br i1 %cmp.n, label %loop_exit, label %loop_body.preheader18

loop_body.preheader18:                            ; preds = %vector.scevcheck, %loop_body.preheader, %middle.block
  %result.012.ph = phi i64 [ 0, %vector.scevcheck ], [ 0, %loop_body.preheader ], [ %12, %middle.block ]
  %i.011.ph = phi i64 [ 1, %vector.scevcheck ], [ 1, %loop_body.preheader ], [ %6, %middle.block ]
  br label %loop_body

loop_body:                                        ; preds = %loop_body.preheader18, %loop_body
  %result.012 = phi i64 [ %addtmp, %loop_body ], [ %result.012.ph, %loop_body.preheader18 ]
  %i.011 = phi i64 [ %addtmp5, %loop_body ], [ %i.011.ph, %loop_body.preheader18 ]
  %addtmp = add i64 %result.012, %i.011
  %addtmp5 = add i64 %i.011, 1
  %cmptmp.not = icmp sgt i64 %addtmp5, %n
  br i1 %cmptmp.not, label %loop_exit, label %loop_body, !llvm.loop !3

loop_exit:                                        ; preds = %loop_body, %middle.block, %entry
  %result.0.lcssa = phi i64 [ 0, %entry ], [ %12, %middle.block ], [ %addtmp, %loop_body ]
  ret i64 %result.0.lcssa
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %print_call = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @print_fmt, i64 55)
  ret i32 0
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare i64 @llvm.vector.reduce.add.v2i64(<2 x i64>) #2

attributes #0 = { nofree nounwind }
attributes #1 = { nofree norecurse nosync nounwind memory(none) }
attributes #2 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!0 = distinct !{!0, !1, !2}
!1 = !{!"llvm.loop.isvectorized", i32 1}
!2 = !{!"llvm.loop.unroll.runtime.disable"}
!3 = distinct !{!3, !1}
